@@ -739,22 +739,25 @@ DRIVERNV(mntecrlo)      //S80b-708: 02/87 Monte Carlo
 DRIVERNV(mntecrfp)      //                Monte Carlo (Free Play)
 DRIVERNV(mntecrlg)      //                Monte Carlo (German)
 DRIVERNV(mntcrgfp)      //                Monte Carlo (German Free Play)
+DRIVERNV(mntcrgmfp)     //                Monte Carlo (German Millions option, Free Play)
 DRIVERNV(mntecrlf)      //                Monte Carlo (French)
 DRIVERNV(mntcrffp)      //                Monte Carlo (French Free Play)
-DRIVERNV(mntecrla)      //                Monte Carlo (alternate set)
+DRIVERNV(mntcrfmfp)     //                Monte Carlo (French Millions option, Free Play)
+DRIVERNV(mntecrla)      //                Monte Carlo (rev.1)
 DRIVERNV(mntcrafp)      //                Monte Carlo (rev.1 Free Play)
 DRIVERNV(mntecrl2)      //                Monte Carlo (rev.2)
 DRIVERNV(mntcr2fp)      //                Monte Carlo (rev.2 Free Play)
+DRIVERNV(mntcrmfp)      //                Monte Carlo (rev.2 Millions option, Free Play)
 DRIVERNV(sprbreak)      //S80b-706: 04/87 Spring Break
 DRIVERNV(sprbrkfp)      //                Spring Break (Free Play)
 DRIVERNV(sprbrkg)       //                Spring Break (German)
 DRIVERNV(sprbrgfp)      //                Spring Break (German Free Play)
 DRIVERNV(sprbrkf)       //                Spring Break (French)
 DRIVERNV(sprbrffp)      //                Spring Break (French Free Play)
-DRIVERNV(sprbrka)       //                Spring Break (alternate set)
+DRIVERNV(sprbrka)       //                Spring Break (rev.1)
 DRIVERNV(sprbrafp)      //                Spring Break (rev.1 Free Play)
-DRIVERNV(sprbrks)       //                Spring Break (single ball game)
-DRIVERNV(sprbrsfp)      //                Spring Break (single ball game, Free Play)
+DRIVERNV(sprbrks)       //                Spring Break (Single ball game)
+DRIVERNV(sprbrsfp)      //                Spring Break (Single ball game, Free Play)
 DRIVERNV(amazonh2)      //S80b-684C:05/87 Amazon Hunt II (French)
 DRIVERNV(amazn2fp)      //                Amazon Hunt II (French Free Play)
 DRIVERNV(arena)         //S80b-709: 06/87 Arena
@@ -763,7 +766,7 @@ DRIVERNV(arenag)        //                Arena (German)
 DRIVERNV(arenagfp)      //                Arena (German Free Play)
 DRIVERNV(arenaf)        //                Arena (French)
 DRIVERNV(arenaffp)      //                Arena (French Free Play)
-DRIVERNV(arenaa)        //                Arena (alternate set)
+DRIVERNV(arenaa)        //                Arena (rev.1)
 DRIVERNV(arenaafp)      //                Arena (rev.1 Free Play)
 DRIVERNV(victory)       //S80b-710: 10/87 Victory
 DRIVERNV(victryfp)      //                Victory (Free Play)
