@@ -19,7 +19,7 @@ One more audiophile tweak: add proper dithering after resampling to the final ou
 Fix regression in solenoid emulation for Juegos Populares
 Correct NVRAM size for Mr. Game
 
-*** ROM SUPPORT *** Thanks to Brent Walker, inkochnito, ipdb.org, Victor Fernandez (City Game), StrangeLeo75
+*** ROM SUPPORT *** Thanks to Brent Walker, inkochnito, ipdb.org, Victor Fernandez (City Game), StrangeLeo75, Flipprojets.fr
 New:
 Alvin G.: U.S.A. Football (Redemption, P08)
 
@@ -34,6 +34,9 @@ Bad Cats LG-4
 Flintstones, The LA-5
 Lucky Draw (alternate version - only difference is the #3 ROM)
 Mach 2 (alternate set)
+Monte Carlo (French Millions option, Free Play)
+Monte Carlo (German Millions option, Free Play)
+Monte Carlo (rev. 2 Millions option, Free Play)
 No Fear 0.8X with SL-1 Sound
 Theatre of Magic 1.2A
 
